--- a/public/site/css/site.css
+++ b/public/site/css/site.css
@@ -1,6 +1,16 @@
 /* import css Roboto */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
+:root {
+    --color-primary: #242368;
+    --color-primary-2: #06c1d4;
+    --black: #13131a;
+    --white: #ffffff;
+    --color-bg: #e9edf0;
+
+    --header-height: 80px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,18 +18,12 @@
     box-sizing: border-box;
 }
 
-:root {
-    --color-primary: #242368;
-    --color-primary-2: #06c1d4;
-    --black: #13131a;
-    --while: #ffffff;
-    --color-bg: #e9edf0;
-
-    --header-height: 80px;
+a {
+    text-decoration: none;
 }
 
 .hidden {
-    display: none;
+    display: none!important;
 }
 
 body {
@@ -31,7 +35,7 @@ body {
 header {
     width: 100%;
     height: var(--header-height);
-    background-color: var(--while);
+    background-color: var(--white);
     position: fixed;
     top: 0;
     z-index: 100;
@@ -104,7 +108,7 @@ header nav a:hover,
 .header-search button {
     width: 50px;
     height: 38px;
-    background-color: var(--while);
+    background-color: var(--white);
     color: var(--color-primary);
     border: none;
     border-top-right-radius: 999px;
@@ -160,7 +164,7 @@ header nav a:hover,
     top: 40px;
     right: -50px;
     list-style: none;
-    background-color: var(--while);
+    background-color: var(--white);
     width: 200px;
     padding: 10px 0;
     border-radius: 0.375rem;
@@ -169,20 +173,33 @@ header nav a:hover,
     z-index: 2;
 }
 
-.header-user .menu li:hover {
-    padding: 0 15px;
-    background: rgba(22, 24, 35, 0.03);
-}
-
 .header-user .menu a {
     display: block;
     width: 100%;
     height: fit-content;
     font-size: 1rem;
-    padding: 8px 0;
+    padding: 8px 15px;
     text-decoration: none;
     color: var(--color-primary);
     text-align: center;
+}
+
+.header-user .menu a:hover {
+    background-color: rgba(22, 24, 35, 0.03);
+    text-decoration: underline;
+    color: var(--color-primary-2);
+}
+
+.header-user .menu a.user-name {
+    text-transform: uppercase;
+    color: #000;
+    font-size: 1.1rem;
+    cursor: default;
+}
+
+.header-user .menu a.user-name:hover {
+    background: none;
+    text-decoration: none;
 }
 
 .overlay {
@@ -218,32 +235,23 @@ header nav a:hover,
     transition: 0.1s all ease;
 }
 
-/* Menu doc */
+/* Main */
+
+#main {
+    margin-top: 108px;
+}
+
+#main .side-bar,
+#main #content {
+    border-radius: 0.375rem;
+}
+
+/* Side bar */
 
 .side-bar {
-    padding: 0;
-    border-radius: 0.375rem;
+    height: fit-content;
     user-select: none;
-    background-color: var(--while);
-    color: var(--color-primary);
-}
-
-.side-bar li {
-    list-style: none;
-    border-bottom: 1px solid var(--color-bg);
-    padding: 15px 20px;
-    cursor: pointer;
-}
-
-.side-bar li:hover {
-    background: rgba(22, 24, 35, 0.03);
-    color: var(--color-primary-2);
-    transition: 0.1s all ease;
-    font-weight: bold;
-}
-
-.side-bar li:last-child {
-    border-bottom: none;
+    background-color: var(--white);
 }
 
 .side-bar p {
@@ -254,197 +262,97 @@ header nav a:hover,
     text-decoration: none;
 }
 
-.side-bar label {
-    cursor: pointer;
+.menu-item {
+    padding: 0 0 5px 0;
+    margin: 0;
 }
 
-.menu-item {
+.menu-item li {
+    list-style: none;
+    border-bottom: 1px solid var(--color-bg);
+}
+
+.menu-item li:last-child {
+    border-bottom: none;
+}
+
+.menu-item a,
+.menu-item p {
+    flex: 1;
+}
+
+.menu-item label {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
-.icon-menu {
-    display: flex;
-    align-items: center;
-    transition: transform linear 0.5s;
+.menu-item label:hover {
+    background: rgba(22, 24, 35, 0.03);
+    transition: 0.1s all ease;
 }
 
-.menu-item-2 {
-    padding: 10px 0 0 20px;
-    font-size: 1rem;
-    display: none;
+.menu-item label.active {
+    background: rgba(22, 24, 35, 0.03);
 }
 
-.menu-item-2 a {
+.menu-item label > * {
+    padding: 15px 20px;
     color: var(--color-primary);
 }
 
-.menu-item-2 .noi-bat {
-    font-weight: bold;
+.menu-item label:hover > * {
+    color: var(--color-primary-2);
+}
+
+.menu-item label.active > * {
+    color: var(--color-primary-2);
     text-decoration: underline;
 }
 
-.check-menu:checked ~ .menu-item-2 {
+.menu-item-1 label > * {
+    font-size: 1rem;
+}
+
+.menu-item-2 {
+    padding-left: 20px;
+    display: none;
+}
+
+.menu-item-2 label > * {
+    font-size: 0.95rem;
+}
+
+.menu-icon {
+    display: flex;
+    align-items: center;
+    transition: transform linear 0.3s;
+}
+
+.menu-check:checked ~ .menu-item-2 {
     display: block;
 }
 
-.check-menu:checked ~ .icon-menu {
+.menu-check:checked ~ label .menu-icon {
     transform: rotate(-180deg);
 }
 
-/* Main */
+/* Content */
 
-#main {
-    margin-top: 108px;
-}
-
-.content {
-    min-height: calc(100vh);
-    position: relative;
-    top: 70px;
-    left: 19.5%;
-    background-color: white;
-    max-width: 80.5%;
-    z-index: 20;
+#content {
+    min-height: calc(100vh - 108px);
+    background-color: var(--white);
+    border: 1px solid transparent;
 }
 
-.title {
-    padding: 20px;
-    font-size: 25px;
-    font-weight: bold;
-    color: var(--main-color);
-    background-color: #fff;
-    margin: 0;
-}
-.grid-container {
-    display: grid;
-    grid-template-columns: calc(100% / 3) calc(100% / 3) calc(100% / 3);
-}
-.grid-item {
-    box-sizing: border-box;
-    background-color: white;
-    padding: 20px 15px;
-    font-size: 30px;
-    border: 0.1px solid #e9edf0;
-    border-collapse: collapse;
-}
-.grid-item:hover {
-    background-color: white;
-}
-.grid-item a {
-    display: block;
-    text-decoration: none;
-    color: var(--main-color);
-}
-.grid-item img {
-    text-align: center;
-    max-width: 170px;
-    height: 200px;
-    transition: 10s all ease;
-}
-.grid-item img:hover {
-    position: relative;
-    top: -10px;
-}
-.grid-item .product_img {
-    display: flex;
-    justify-content: center;
-    width: 170px;
-    height: 200px;
-    margin: 0 auto;
-}
-.grid-item .discound {
-    box-sizing: border-box;
-    height: 40px;
-    font-size: 15px;
-}
-.grid-item .product_name p {
-    color: var(--main-color);
-    font-size: 20px;
-    margin-top: 30px;
-}
-.grid-item .product_name p:hover {
-    color: var(--color-primary-2);
-}
-.price {
-    font-size: 20px;
-    margin-top: 15px;
-    color: red;
-}
+/* Footer */
+
 footer {
-    position: relative;
-    top: 70px;
-    background-color: var(--main-color);
-}
-.phan_trang {
-    margin: 30px 0;
-    padding-bottom: 30px;
-    text-align: center;
-}
-.phan_trang button {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    margin-right: 20px;
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
-    border: 1px solid var(--main-color);
-    background-color: #fff;
-}
-.phan_trang button.check,
-.phan_trang button:hover {
-    color: #fff;
-    background-color: var(--color-primary-2);
-}
-#trang {
-    min-height: 1200px;
-}
-.bo_loc {
-    margin: 0 20px 30px 20px;
-}
-select {
-    outline: none;
-    margin-right: 30px;
-    text-align: center;
+    margin-top: 50px;
+    background-color: var(--color-primary);
 }
 
-/*hiệu ứng quay*/
-.hidden {
-    display: none;
-}
-.icon {
-    font-size: 80px;
-    color: red;
-    position: fixed;
-    top: 50vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: -40px;
-    margin-left: -40px;
-}
-.xoay {
-    animation: xoay 1.5s linear infinite;
-    -moz-animation: xoay 1.5s linear infinite;
-    -ms-animation: xoay 1.5s linear infinite;
-    -o-animation: xoay 1.5s linear infinite;
-    -webkit-animation: xoay 1.5s linear infinite;
-}
-
-@keyframes xoay {
-    from {
-        -ms-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    to {
-        -ms-transform: rotate(360deg);
-        -moz-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
+footer a:hover {
+    text-decoration: underline;
 }
